Fixed up bug with safari having long account names overlap the account close button.

--- a/public/stylesheets/sass/marketing.sass
+++ b/public/stylesheets/sass/marketing.sass
@@ -593,13 +593,14 @@ span.left
       padding: 0
   
   &.active #account-button
+    display: block
     color: !link_hover_colour
-    background: url("/images/close.png") no-repeat scroll right -29px transparent
-    padding-right: 14px
+    background: url("/images/close.png") no-repeat scroll right -25px transparent
+    padding: 0 14px 0 0 
     
     &:hover
       color: #444
-      background-position: right 1px
+      background-position: right 5px
 
   #account-button
     outline: none
